# coding_interview_v0

./: .gitignore  README.md  analytics.py  api.py  aws-rios-to-json.py  aws_instances.py  database.py  db_schema.sql  docker-compose.yml  ec2_response.py  instance_ranker.py  instance_ranker_test.py  main.py  models.py  pyproject.toml  recurring_charge.py  schemas.py  server.py  test_main.http  test_main.py
database/: database_connection.py
db/: Dockerfile  config.py  data.py  db_config.ini  schema.sql
