[tool.poetry]
name = "pump"
version = "0.1.0"
description = ""
authors = ["Jason Strutz <j@jasonstrutz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
boto3 = {extras = ["crt"], version = "^1.28.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
