[tool.poetry]
name = "takehome"
version = "0.1.0"
description = ""
authors = ["mkostin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
psycopg2 = "^2.9.8"
boto3 = "^1.28.57"
sqlalchemy = "^2.0.21"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
