[tool.poetry]
name = "coding-interview-v0"
version = "0.1.0"
description = ""
authors = ["Pravan Kalaga <pravan.kalaga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.68"
fastapi = "^0.104.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
